Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 body {
-  background-color: orange;
   text-align: center;
   max-width: 960px;
   margin: auto;
@@ -7,7 +6,7 @@ body {
 
 .board-container {
   display: inline-grid;
-  background: red;
+  background: black;
   grid-template-columns: auto 1fr 1fr;
   max-width: 700px;
   margin-left: auto;
@@ -17,7 +16,7 @@ body {
   border-radius: 25px;
 }
 .square {
-  border: 5px solid rgba(0, 0, 0, 0.8);
+  border: 2px solid white;
   padding: 5px;
   font-size: 30px;
   text-align: center;
@@ -25,6 +24,7 @@ body {
   height: 100px;
   font-size: 300%;
   vertical-align: center;
+  color: white
 }
 
 #button1, #button2, #button3 {
@@ -41,3 +41,18 @@ body {
 #button3, #button6, #button9 {
   border-right: none;
 }
+
+#button1,
+ #button3,
+  #button5,
+   #button7,
+    #button9 {
+      background-color: #800080
+    }
+
+#button2,
+ #button4,
+  #button6,
+   #button8 {
+     background-color: #db85ec
+   }
